Move generation of jOOQ DSL to separate project