@@ -15,19 +15,13 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<java.version>10</java.version>
-		<jooq.version>3.11.3</jooq.version>
 		<junit-jupiter.version>5.2.0</junit-jupiter.version>
 		<junit-platform.version>1.2.0</junit-platform.version>
 		<neo4j.version>3.4.5</neo4j.version>
 		<neo4j-java-driver.version>1.6.2</neo4j-java-driver.version>
-		<postgresql.version>42.2.4</postgresql.version>
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
 		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
-
-		<db.url>jdbc:postgresql://localhost:5432/bootiful-databases</db.url>
-		<db.username>bootiful-databases</db.username>
-		<db.password>bootiful-databases</db.password>
 	</properties>
 
 	<dependencies>
@@ -39,16 +33,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jooq</groupId>
-			<artifactId>jooq</artifactId>
-			<version>${jooq.version}</version>
+			<groupId>ac.simons.music</groupId>
+			<artifactId>statsdb</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
@@ -82,54 +69,6 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<compilerArgs>
-						<arg>--add-modules</arg>
-						<arg>java.xml.ws.annotation</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.jooq</groupId>
-				<artifactId>jooq-codegen-maven</artifactId>
-				<version>${jooq.version}</version>
-				<!-- The jOOQ code generation plugin is also executed in the generate-sources
-					phase, prior to compilation -->
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<jdbc>
-						<driver>org.postgresql.Driver</driver>
-						<url>${db.url}</url>
-						<user>${db.username}</user>
-						<password>${db.password}</password>
-					</jdbc>
-					<generator>
-						<database>
-							<name>org.jooq.meta.postgres.PostgresDatabase</name>
-							<schemaVersionProvider>SELECT :schema_name || '_' || MAX("version") FROM "schema_version"</schemaVersionProvider>
-							<includes>.*</includes>
-							<excludes>schema_version</excludes>
-							<schemata>
-								<schema>
-									<inputSchema>public</inputSchema>
-									<outputSchemaToDefault>true</outputSchemaToDefault>
-								</schema>
-							</schemata>
-						</database>
-						<generate>
-							<deprecated>false</deprecated>
-						</generate>
-						<target>
-							<packageName>ac.simons.music.statsdb</packageName>
-							<directory>target/generated-sources/jooq</directory>
-						</target>
-					</generator>
 				</configuration>
 			</plugin>
 			<plugin>
